--- a/package.json
+++ b/package.json
@@ -8,20 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^2.3.4",
+    "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-credit-card-validation": "^1.0.5",
+    "vue-password-strength-meter": "^1.7.2",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue-simple-password-meter": "^0.1.0",
+    "vuex": "^4.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.18.0",
     "eslint-plugin-vue": "^8.0.3"
   }
 }
