--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
     "vue": "^3.2.13",
     "vue-credit-card-validation": "^1.0.5",
     "vue-password-strength-meter": "^1.7.2",
     "vue-router": "^4.0.3",
     "vue-simple-password-meter": "^0.1.0",
     "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
