--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.1",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
     "vue-credit-card-validation": "^1.0.5",
     "vue-password-strength-meter": "^1.7.2",
     "vue-router": "^4.0.3",
