--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-credit-card-validation": "^1.0.5",
+    "vue-loading-overlay": "^5.0.3",
     "vue-password-strength-meter": "^1.7.2",
     "vue-router": "^4.0.3",
     "vue-simple-password-meter": "^0.1.0",
